<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment">

    <!--Avatar-->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/_120mdp"
        android:layout_height="@dimen/_120mdp"
        android:layout_marginTop="@dimen/_50mdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/user_av"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Register Fileds-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputName"
        style="@style/InputTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30mdp"
        android:layout_marginTop="@dimen/_30mdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:startIconDrawable="@drawable/person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtName"
            style="@style/TextViewLightStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textSize="@dimen/_14font_mdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEmail"
        style="@style/InputTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30mdp"
        android:layout_marginTop="@dimen/_30mdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputName"
        app:startIconDrawable="@drawable/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            style="@style/TextViewLightStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="@dimen/_14font_mdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPassword"
        style="@style/InputTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30mdp"
        android:layout_marginTop="@dimen/_30mdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/philipinelSilver"
        app:startIconDrawable="@drawable/lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            style="@style/TextViewLightStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="@dimen/_14font_mdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50mdp"
        android:layout_marginHorizontal="@dimen/_30mdp"
        android:layout_marginTop="@dimen/_30mdp"
        android:backgroundTint="@color/fusion_red"
        android:text="@string/submit"
        android:textColor="@color/gunmatel"
        android:textSize="@dimen/_18font_mdp"
        app:cornerRadius="@dimen/_8mdp"
        app:layout_constraintTop_toBottomOf="@id/inputPassword"
        tools:layout_editor_absoluteX="39dp" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="20dp"
        android:layout_height="@dimen/_20mdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/submitBtn"
        app:layout_constraintEnd_toEndOf="@+id/submitBtn"
        app:layout_constraintStart_toStartOf="@+id/submitBtn"
        app:layout_constraintTop_toTopOf="@+id/submitBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>