<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="@dimen/_115mdp"
            android:layout_height="@dimen/_140mdp"
            android:layout_margin="@dimen/_4mdp"
            app:cardCornerRadius="@dimen/_10mdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgPoster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:src="@android:color/transparent" />


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/title"
            style="@style/TextViewLightStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10mdp"
            android:layout_marginTop="@dimen/_10mdp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/card"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtRate"
            style="@style/TextViewLightStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10mdp"
            android:layout_marginTop="@dimen/_8mdp"
            android:drawablePadding="@dimen/_4mdp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/rate"
            app:drawableStartCompat="@drawable/ic_baseline_star_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/card"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/txtCountry"
            style="@style/TextViewLightStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10mdp"
            android:layout_marginTop="@dimen/_8mdp"
            android:drawablePadding="@dimen/_4mdp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/country"
            app:drawableStartCompat="@drawable/language"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/card"
            app:layout_constraintTop_toBottomOf="@id/txtRate" />

        <TextView
            android:id="@+id/txtYear"
            style="@style/TextViewLightStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10mdp"
            android:layout_marginTop="@dimen/_8mdp"
            android:drawablePadding="@dimen/_4mdp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/country"
            app:drawableStartCompat="@drawable/calendar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/card"
            app:layout_constraintTop_toBottomOf="@id/txtCountry" />

        <TextView
            android:id="@+id/txtMore"
            style="@style/TextViewLightStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10mdp"
            android:layout_marginTop="@dimen/_13mdp"
            android:drawablePadding="@dimen/_4mdp"
            android:drawableTint="@color/fusion_red"
            android:text="@string/moreInfo"
            android:textColor="@color/fusion_red"
            app:drawableEndCompat="@drawable/chevron_right"
            app:layout_constraintStart_toEndOf="@+id/card"
            app:layout_constraintTop_toBottomOf="@id/txtYear" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>